# advanced_mlops_project

./: .dvcignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  saved_models.dvc  setup.cfg
.dvc/: config
advanced_mlops_project/: infer.py  metrics.py  nn_model.py  train.py  utils.py
advanced_mlops_project/configs/: cfg.yaml
