[tool.poetry]
name = "advanced-mlops-project"
version = "0.1.0"
description = "Study project on MLOps discipline"
authors = ["dsbugakovv <dmitrii.bulghakov@bk.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
pydantic = "^2.5.2"
scikit-image = "^0.22.0"
torchsummary = "^1.5.1"
torchvision = "^0.16.2"
torch = "^2.1.2"
ipython = "^8.19.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
dvc = "^3.36.1"
jupyter = "^1.0.0"
dvc-gdrive = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.flake8]
max-line-length = 120

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"
